Fix 109: temporarily add center alignment to menus

--- a/site/web/app/themes/sd-theme/resources/assets/styles/components/_navbar.scss
+++ b/site/web/app/themes/sd-theme/resources/assets/styles/components/_navbar.scss
@@ -26,6 +26,11 @@ nav.navbar {
     padding: 0.5em 0;
     margin: 0;
   }
+
+  .header-menu {
+    @extend .justify-content-center;
+    @extend .d-flex;
+  }
 }
 
 .search-btn {
